# sdynpy

./: .buildinfo  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.rst  bibliography.html  core_functionality.html  examples.html  genindex.html  index.html  modal_tutorials.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  run_tests.bat  sdynpy_showcase.html  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.doctrees/: bibliography.doctree  environment.pickle  examples.doctree  index.doctree  modal_tutorials.doctree  modules.doctree  sdynpy_showcase.doctree  usage.doctree
_autosummary/: sdynpy.core.html  sdynpy.core.sdynpy_array.SdynpyArray.html  sdynpy.core.sdynpy_array.html  sdynpy.core.sdynpy_colors.html  sdynpy.core.sdynpy_coordinate.CoordinateArray.html  sdynpy.core.sdynpy_coordinate.coordinate_array.html  sdynpy.core.sdynpy_coordinate.create_coordinate_string.html  sdynpy.core.sdynpy_coordinate.from_matlab_cellstr.html  sdynpy.core.sdynpy_coordinate.from_nodelist.html  sdynpy.core.sdynpy_coordinate.html  sdynpy.core.sdynpy_coordinate.outer_product.html  sdynpy.core.sdynpy_coordinate.parse_coordinate_string.html  sdynpy.core.sdynpy_data.AbscissaIndexExtractor.html  sdynpy.core.sdynpy_data.AbscissaValueExtractor.html  sdynpy.core.sdynpy_data.CPSDPlot.html  sdynpy.core.sdynpy_data.CoherenceArray.html  sdynpy.core.sdynpy_data.ComplexType.html  sdynpy.core.sdynpy_data.CorrelationArray.html  sdynpy.core.sdynpy_data.DecayedSineTable.html  sdynpy.core.sdynpy_data.FunctionTypes.html  sdynpy.core.sdynpy_data.GUIPlot.html  sdynpy.core.sdynpy_data.ImpulseResponseFunctionArray.html  sdynpy.core.sdynpy_data.MPLCanvas.html  sdynpy.core.sdynpy_data.MPLMultiCanvas.html  sdynpy.core.sdynpy_data.ModeIndicatorFunctionArray.html  sdynpy.core.sdynpy_data.MultipleCoherenceArray.html  sdynpy.core.sdynpy_data.NDDataArray.html  sdynpy.core.sdynpy_data.PowerSpectralDensityArray.html  sdynpy.core.sdynpy_data.PowerSpectrumArray.html  sdynpy.core.sdynpy_data.ShockResponseSpectrumArray.html  sdynpy.core.sdynpy_data.SpecificDataType.html  sdynpy.core.sdynpy_data.SpectrumArray.html  sdynpy.core.sdynpy_data.TimeHistoryArray.html  sdynpy.core.sdynpy_data.TransferFunctionArray.html  sdynpy.core.sdynpy_data.TransmissibilityArray.html  sdynpy.core.sdynpy_data.TypeQual.html  sdynpy.core.sdynpy_data.coherence_array.html  sdynpy.core.sdynpy_data.correlation_array.html  (+346 more)
(+1100 files in other folders)
